refactor: struct messages
